phase2_Dev/src/objects/Restraint_Report__c.object
<CustomObject>
    <description>For R&amp;P, this object is used to capture DYS and Other types of Restraints. There will be a look up relationship from Restraint Report Object to Provider Object.</description>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <defaultValue>LEFT(Text (Today()),4)</defaultValue>
        <description>Calendar Year</description>
        <inlineHelpText>Calendar Year</inlineHelpText>
        <label>Calendar Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Chosen contact must be related to the Provider</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Provider__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>Community</value>
            </filterItems>
            <infoMessage>Select a contact associated with the provider this restraint report belongs to.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Restraint Reports</relationshipLabel>
        <relationshipName>Restraint_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EEC_Legacy_History_Restraint_ID__c</fullName>
        <externalId>true</externalId>
        <label>EEC Legacy History Restraint ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Day_Quarter_Date__c</fullName>
        <formula>DATE( VALUE(Calendar_Year__c) ,IF( ISPICKVAL(Quarter__c, &quot;First Quarter&quot;), 1, IF(ISPICKVAL(Quarter__c, &quot;Second Quarter&quot;),4,IF( ISPICKVAL(Quarter__c, &quot;Third Quarter&quot;),7,10) ))  ,1)</formula>
        <label>First Day Quarter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floor_Both_Prone_and_Supine_0_5__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 0-5 minutes on the Floor in both the Prone and Supine Positions</inlineHelpText>
        <label>Floor (Both Prone and Supine) 0-5</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Both_Prone_and_Supine_11_20__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 11-20 minutes on the Floor in both the Prone and Supine Positions</inlineHelpText>
        <label>Floor (Both Prone and Supine) 11-20</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Both_Prone_and_Supine_21_30__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 21-30 minutes on the Floor in both the Prone and Supine Positions</inlineHelpText>
        <label>Floor (Both Prone and Supine) 21-30</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Both_Prone_and_Supine_60__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter more than 60 mintes on the Floor in both the Prone and Supine Positions</inlineHelpText>
        <label>Floor (Both Prone and Supine) &gt;60</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Prone_0_5__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 0-5 minutes on the Floor in the Prone Position</inlineHelpText>
        <label>Floor (Prone) 0-5</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Prone_11_20__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 11-20 minutes on the Floor in the Prone Position</inlineHelpText>
        <label>Floor (Prone) 11-20</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Prone_21_30__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 21-30 minutes on the Floor in the Prone Position</inlineHelpText>
        <label>Floor (Prone) 21-30</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Prone_60__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter exceeding 60 minutes on the Floor in the Prone Position</inlineHelpText>
        <label>Floor (Prone) &gt;60</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Supine_0_5__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 0-5 minutes on the Floor in the Supine Position</inlineHelpText>
        <label>Floor (Supine) 0-5</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Supine_11_20__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 11-20 minutes on the Floor in the Supine Position</inlineHelpText>
        <label>Floor (Supine) 11-20</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Supine_21_30__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 21-30 minutes on the Floor in the Supine Position</inlineHelpText>
        <label>Floor (Supine) 21-30</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Supine_60__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter exceeding 60 minutes on the Floor in the Supine Position</inlineHelpText>
        <label>Floor (Supine) &gt;60</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>Floor_Both_Prone_and_Supine_0_5__c+
Floor_Both_Prone_and_Supine_6_10__c+
Floor_Both_Prone_and_Supine_11_20__c+
Floor_Both_Prone_and_Supine_21_30__c+
Floor_Both_Prone_and_Supine_31_40__c+
Floor_Both_Prone_and_Supine_41_50__c+
Floor_Both_Prone_and_Supine_51_60__c+
Floor_Both_Prone_and_Supine_60__c+

Floor_Prone_0_5__c+
Floor_Prone_6_10__c+
Floor_Prone_11_20__c+
Floor_Prone_21_30__c+
Floor_Prone_31_40__c+
Floor_Prone_41_50__c+
Floor_Prone_51_60__c+
Floor_Prone_60__c+

Floor_Supine_0_5__c+
Floor_Supine_6_10__c+
Floor_Supine_11_20__c+
Floor_Supine_21_30__c+
Floor_Supine_31_40__c+
Floor_Supine_41_50__c+
Floor_Supine_51_60__c+
Floor_Supine_60__c+


Physical_Mechanical_0_5__c+
Physical_Mechanical_6_10__c+
Physical_Mechanical_11_20__c+
Physical_Mechanical_21_30__c+
Physical_Mechanical_31_40__c+
Physical_Mechanical_41_50__c+
Physical_Mechanical_51_60__c+
Physical_Mechanical_60__c+

Physical_holds_Only_0_5__c+
Physical_Holds_Only_6_10__c+
Physical_Holds_Only_11_20__c+
Physical_Holds_Only_21_30__c+
Physical_Holds_Only_31_40__c+
Physical_Holds_Only_41_50__c+
Physical_Holds_Only_51_60__c+
Physical_Holds_Only_60__c+

Sitting_0_5__c+
Sitting_6_10__c+
Sitting_11_20__c+
Sitting_21_30__c+
Sitting_31_40__c+
Sitting_41_50__c+
Sitting_51_60__c+
Sitting_60__c+

Standing_0_5__c+
Standing_6_10__c+
Standing_11_20__c+
Standing_21_30__c+
Standing_31_40__c+
Standing_41_50__c+
Standing_51_60__c+
Standing_60__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injured_Residents_Minor_Injury__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Injured Residents (Minor Injury)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injured_Residents_Serious_Injury__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Injured Residents (Serious Injury)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injured_Staff_Minor_Injury__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Injured Staff (Minor Injury)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injured_Staff_Serious_Injury__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Injured Staff (Serious Injury)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Interaction__c</fullName>
        <description>Legacy System Number</description>
        <formula>Provider__r.Provider_No__c</formula>
        <label>Legacy System Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Restraints_Leading_to_Res_Injury__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraints which lead to resident injury</inlineHelpText>
        <label>No. Restraints Leading to Res. Injury</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Restraints_Leading_to_Staff_Injury__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraints which lead to staff injury</inlineHelpText>
        <label>No. Restraints Leading to Staff Injury</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Holds_Only_11_20__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 11-20 minutes using Physical holds only</inlineHelpText>
        <label>Physical Holds Only 11-20</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Holds_Only_21_30__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 21-30 minutes using Physical holds only</inlineHelpText>
        <label>Physical Holds Only 21-30</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Holds_Only_60__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter exceeding 60 minutes using Physical holds only</inlineHelpText>
        <label>Physical Holds Only &gt;60</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Mechanical_0_5__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 0-5 minutes using Physical &amp; Mechanical holds</inlineHelpText>
        <label>Physical &amp; Mechanical 0-5</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Mechanical_11_20__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 11-20 minutes using Physical &amp; Mechanical holds</inlineHelpText>
        <label>Physical &amp; Mechanical 11-20</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Mechanical_21_30__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 21-30 minutes using Physical &amp; Mechanical holds</inlineHelpText>
        <label>Physical &amp; Mechanical 21-30</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Mechanical_60__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter exceeding 60 minutes using Physical &amp; Mechanical holds</inlineHelpText>
        <label>Physical &amp; Mechanical &gt;60</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_holds_Only_0_5__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 0-5 minutes using Physical holds only</inlineHelpText>
        <label>Physical Holds Only 0-5</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <description>Look up relationship from Restraint Report to Provider</description>
        <inlineHelpText>Look up relationship from Restraint Report to Provider</inlineHelpText>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Restraint Reports</relationshipLabel>
        <relationshipName>Restraint_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Calendar Quarter</description>
        <inlineHelpText>Calendar Quarter for which the Restraint Report is being generated.</inlineHelpText>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>First Quarter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Second Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth Quarter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restraint_Method2__c</fullName>
        <label>Restraint Method</label>
        <picklist>
            <picklistValues>
                <fullName>ANV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAPPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NonRestraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sitting_0_5__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 0-5 minutes in the Sitting position</inlineHelpText>
        <label>Sitting 0-5</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sitting_11_20__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 11-20 minutes in the Sitting position</inlineHelpText>
        <label>Sitting 11-20</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sitting_21_30__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 21-30 minutes in the Sitting position</inlineHelpText>
        <label>Sitting 21-30</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sitting_60__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter exceeding 60 minutes in the Sitting position</inlineHelpText>
        <label>Sitting &gt;60</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standing_0_5__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field is used to capture Restraint Statistics by Position and Minutes.</description>
        <inlineHelpText>Number of restraint cases during the reported quarter between 0-5 minutes in the Standing position</inlineHelpText>
        <label>Standing 0-5</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standing_11_20__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 11-20 minutes in the Standing position</inlineHelpText>
        <label>Standing 11-20</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standing_21_30__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter between 21-30 minutes in the Standing position</inlineHelpText>
        <label>Standing 21-30</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standing_60__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of restraint cases during the reported quarter exceeding 60 minutes in the Standing position</inlineHelpText>
        <label>Standing &gt;60</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Bed_Days_Utilized_this_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Bed Days Utilized this Quarter</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Injured__c</fullName>
        <formula>Injured_Residents_Minor_Injury__c +
 Injured_Residents_Serious_Injury__c +
 Injured_Staff_Minor_Injury__c +
 Injured_Staff_Serious_Injury__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Injured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unduplicated_Count_of_Residents_Served__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unduplicated Count of Residents Served</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unduplicated_Count_of_Residnts_Restraind__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unduplicated Count of Residents Restrain</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Restraint Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Quarter__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DYS_Restraint_Report</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Legacy_System_Interaction__c</columns>
        <columns>Calendar_Year__c</columns>
        <columns>Quarter__c</columns>
        <columns>Grand_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Restraint_Report__c.DYS_Restraint</value>
        </filters>
        <label>DYS Restraint Report</label>
    </listViews>
    <listViews>
        <fullName>Other_Restraint_Report</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Legacy_System_Interaction__c</columns>
        <columns>Calendar_Year__c</columns>
        <columns>Quarter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Restraint_Report__c.Other_Restraint</value>
        </filters>
        <label>Other Restraint Report</label>
    </listViews>
    <listViews>
        <fullName>Varied_Restraint_Report</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Legacy_System_Interaction__c</columns>
        <columns>Calendar_Year__c</columns>
        <columns>Quarter__c</columns>
        <columns>Grand_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Restraint_Report__c.Varied_Restraint</value>
        </filters>
        <label>Varied Restraint Report</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restraint Reports</pluralLabel>
    <recordTypes>
        <fullName>DYS_Restraint</fullName>
        <active>true</active>
        <description>DYS Restraint</description>
        <label>DYS Restraint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Restraint</fullName>
        <active>true</active>
        <description>Other Restraint</description>
        <label>Other Restraint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Varied_Restraint</fullName>
        <active>true</active>
        <description>Program type which is neither DYS or Non-DYS</description>
        <label>Varied Restraint</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Report_to_match_Provider_RestraintMethod</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( RecordType.Name = &apos;DYS Restraint&apos; , TEXT(Provider__r.Restraint_Method__c) = &apos;DYS&apos; ) , False , 
  IF( AND( RecordType.Name = &apos;Varied Restraint&apos; , TEXT(Provider__r.Restraint_Method__c) = &apos;Varied&apos;), False,
  IF( AND( RecordType.Name = &apos;Other Restraint&apos; , TEXT(Provider__r.Restraint_Method__c) &lt;&gt; &apos;DYS&apos;,TEXT(Provider__r.Restraint_Method__c) &lt;&gt; &apos;Varied&apos;), False, True)))</errorConditionFormula>
        <errorMessage>The restraint report doesn&apos;t match the restraint method on the provider.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_is_correct</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(AND(ISNUMBER( Calendar_Year__c ), VALUE(Calendar_Year__c) &gt; 1900, VALUE(Calendar_Year__c) &lt;= 2100))</errorConditionFormula>
        <errorDisplayField>Calendar_Year__c</errorDisplayField>
        <errorMessage>Calendar Year is not a correct value, please update.</errorMessage>
    </validationRules>
</CustomObject>